--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/tsc src",
-    "start": "node_modules/.bin/tsc -w src"
+    "build": "node_modules/.bin/tsc",
+    "start": "node_modules/.bin/webpack-dev-server --no-info --progress --colors"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +14,13 @@
     "mobservable-react": "^2.1.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "systemjs": "^0.19.22",
     "todomvc-app-css": "^2.0.4",
     "todomvc-common": "^1.0.2"
   },
   "devDependencies": {
-    "http-server": "^0.9.0",
-    "typescript": "^1.8.2"
+    "ts-loader": "^0.8.1",
+    "typescript": "^1.8.2",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
