--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.2",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-notifier": "^1.3.0"
   }
 }
