--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "target": "es5",
         "module": "commonjs",
         "moduleResolution": "node",
-        "sourceMap": true        
+        "sourceMap": true,
+        "experimentalDecorators": true
     },
     "exclude": [
         "node_modules",
