--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "sourceMap": true,
         "experimentalDecorators": true
     },
+    "compileOnSave": false,
     "exclude": [
         "node_modules",
         "dist"
