--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "npm build && node jasmine.js",
     "build": "node_modules/.bin/tsc",
     "start": "node_modules/.bin/webpack-dev-server --no-info --progress --colors"
   },
@@ -18,6 +19,8 @@
     "todomvc-common": "^1.0.2"
   },
   "devDependencies": {
+    "jasmine": "^2.4.1",
+    "jasmine-spec-reporter": "^2.4.0",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.2",
     "webpack": "^1.12.14",
